<resources>
    <string name="app_name">Pediatrics</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="size_at_birth">Size at birth</string>
    <string name="sample_head_size">47.5</string>
    <string name="head_circumference">Head circumference</string>
    <string name="title_head_circumference">Head</string>
    <string name="title_wnh">Weight/Height</string>
    <string name="title_bp">Blood Pressure</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="wnh">Weight and Height</string>
    <string name="sample_weight_and_height">49.8cm 3.3kg</string>
    <string name="weight_at_birth">Weight at birth</string>
    <string name="height_at_birth">Height at birth</string>
    <string name="format_height_and_weight">%s cm %s kg</string>
    <string name="format_head_circumference">%s cm</string>
</resources>
